--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "sst dev",
-    "build": "sst build",
-    "deploy": "sst deploy",
-    "remove": "sst remove",
-    "console": "sst console",
+    "build": "sst build --profile lira",
+    "deploy": "sst deploy --profile lira --region eu-west-1  -stage tst",
+    "remove": "sst remove --profile lira --region eu-west-1",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
