--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "sst dev",
     "build": "sst build --profile lira",
-    "deploy": "sst deploy --profile lira --region eu-west-1  -stage tst",
+    "deploy": "sst deploy --profile lira --region eu-west-1  --stage tst",
+    "deploy:prd": "sst deploy --profile lira --region eu-central-1  --stage prd",
     "remove": "sst remove --profile lira --region eu-west-1",
     "typecheck": "tsc --noEmit"
   },
