--- a/packages/public-site/package.json
+++ b/packages/public-site/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-overlays": "5.2.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
     "styled-system": "^5.1.5",
