--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,7 +8,7 @@
     "build": "sst build --profile lira",
     "deploy": "sst deploy --profile lira --region eu-west-1  --stage tst",
     "deploy:prd": "sst deploy --profile lira --region eu-central-1  --stage prd",
-    "remove": "sst remove --profile lira --region eu-west-1",
+    "remove": "sst remove --profile lira --region eu-west-1 --stage tst",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
