--- a/packages/public-site/package.json
+++ b/packages/public-site/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@metamask/sdk": "^0.3.0",
     "@reduxjs/toolkit": "^2.2.1",
-    "@satoshi-lira/deployments": "1.1.0-beta.5",
+    "@satoshi-lira/deployments": "2.0.0-beta.6",
+    "@tanstack/react-query": "^5.27.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@wagmi/cli": "^2.1.2",
     "ethers": "^5.7.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -25,9 +27,9 @@
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
     "styled-system": "^5.1.5",
-    "typescript": "^4.9.5",
-    "viem": "^0.3.40",
-    "wagmi": "^1.0.9",
+    "typescript": "^5.0.4",
+    "viem": "^2.8.4",
+    "wagmi": "^2.5.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
