--- a/packages/public-site/package.json
+++ b/packages/public-site/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@metamask/sdk": "^0.3.0",
     "@reduxjs/toolkit": "^2.2.1",
-    "@satoshi-lira/deployments": "2.0.0-beta.6",
+    "@satoshi-lira/abi": "1.2.0",
+    "@satoshi-lira/deployments": "2.0.0-beta.7",
     "@tanstack/react-query": "^5.27.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
